syntax = "proto3";

package secrets_service;

// Secrets Service - Centralized secret management system
service SecretsService {
  // Get a secret value by key
  rpc GetSecret(SecretRequest) returns (SecretResponse);
  
  // Set a secret value
  rpc SetSecret(SetSecretRequest) returns (OperationResponse);
  
  // Delete a secret by key
  rpc DeleteSecret(SecretRequest) returns (OperationResponse);
  
  // List available secrets (metadata only, not values)
  rpc ListSecrets(ListSecretsRequest) returns (ListSecretsResponse);
  
  // Generate a short-lived service token
  rpc GenerateToken(TokenRequest) returns (TokenResponse);
  
  // Authenticate a service using role-based access
  rpc AuthenticateService(ServiceAuthRequest) returns (ServiceAuthResponse);
}

// Request to fetch a secret
message SecretRequest {
  string key = 1;           // Secret key to look up
  string service_id = 2;    // ID of the requesting service
  string auth_token = 3;    // Authentication token
}

// Response containing a secret value
message SecretResponse {
  bool success = 1;         // Whether the request was successful
  string secret_value = 2;  // The secret value (only present if successful)
  string error = 3;         // Error message if unsuccessful
  int64 expires_at = 4;     // Unix timestamp of secret expiration (if applicable)
}

// Request to set a secret
message SetSecretRequest {
  string key = 1;           // Secret key to set
  string secret_value = 2;  // The secret value to store
  string service_id = 3;    // ID of the requesting service
  string auth_token = 4;    // Authentication token
  int64 ttl = 5;            // Time-to-live in seconds (0 for no expiration)
  map<string, string> metadata = 6; // Additional metadata for the secret
}

// Response for operations (set, delete)
message OperationResponse {
  bool success = 1;        // Whether the operation was successful
  string error = 2;        // Error message if unsuccessful
  string request_id = 3;   // Unique request identifier
}

// Request to list secrets
message ListSecretsRequest {
  string service_id = 1;    // ID of the requesting service
  string auth_token = 2;    // Authentication token
  string path_prefix = 3;   // Optional path prefix to filter secrets
}

// Response containing list of secrets
message ListSecretsResponse {
  bool success = 1;                    // Whether the request was successful
  string error = 2;                    // Error message if unsuccessful
  repeated SecretMetadata secrets = 3; // List of secret metadata
}

// Metadata about a secret (no actual values)
message SecretMetadata {
  string key = 1;                  // Secret key
  int64 created_at = 2;            // Unix timestamp of creation time
  int64 updated_at = 3;            // Unix timestamp of last update
  int64 expires_at = 4;            // Unix timestamp of expiration (0 for no expiration)
  map<string, string> metadata = 5; // Additional metadata
}

// Request to generate a short-lived token
message TokenRequest {
  string service_id = 1;      // ID of the requesting service
  string service_secret = 2;  // Secret for service authentication
  int64 ttl = 3;              // Requested TTL in seconds
  repeated string roles = 4;  // Requested roles for the token
}

// Response containing a generated token
message TokenResponse {
  bool success = 1;               // Whether the request was successful
  string token = 2;               // The generated token
  int64 expires_at = 3;           // Unix timestamp of token expiration
  repeated string granted_roles = 4; // Roles granted to the token
  string error = 5;               // Error message if unsuccessful
}

// Request to authenticate a service
message ServiceAuthRequest {
  string service_id = 1;       // Service identifier
  string auth_token = 2;       // Authentication token or service secret
  string target_resource = 3;  // Resource the service wants to access
  string action = 4;           // Action the service wants to perform
}

// Response for service authentication
message ServiceAuthResponse {
  bool authenticated = 1;      // Whether the service is authenticated
  bool authorized = 2;         // Whether the service is authorized for the requested action
  string error = 3;            // Error message if authentication/authorization failed
  repeated string permissions = 4; // List of permissions granted to the service
}